# Create-DbfsClusterLogs

./: .gitignore  AzureDatabricks-ClusterLogDelivery-filesystem.schema.txt  AzureDatabricks-cluster-log-delivery-directory-structure.py  pyproject.toml
schemas/: AzureDatabricks-ClusterLogDelivery-filesystem.schema.json
scripts/: Publish-Module.ps1
src/: clusterlogs.py
tests/: test-match_to_datetime.setup.py
