[tool.poetry]
name = "clusterlogs"
version = "0.1.4"
description = "Utility module to export delivered cluster logs from Azure Databricks."
license = "Proprietary"
authors = ["Travis LaGrone <Travis.LaGrone@microsoft.com>"]
packages = [
	{ include = "clusterlogs.py", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
